<resources>
    <string name="app_name">SpyFall</string>
    <string name="testButton">Test MySQL Connection</string>
    <string name="helloWorld">Hello World!</string>
    <string name="store">Store</string>
    <string name="createGame">Create Game</string>
    <string name="joinGame">Join Game</string>
    <string name="spy">You are a spy</string>
    <string name="nonSpy">You are not a spy</string>

    <string name="createName">Game Name</string>
    <string name="gameCode">Game Code</string>
    <string name="codeHint">Enter a 5 character code</string>
    <string name="begin">Begin Game</string>
    <string name="returnLobby">Return to Lobby</string>
    <string name="numPlayers">Number of Players</string>

    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>

    <string name="auth_failed">Authentication failed</string>
    <string name="register_button">Register</string>
    <string name="log_out_button">Log Out</string>

    <string name="game_lobby_welcome">Welcome to the game lobby. When enough players have joined the lobby, you may begin the game.</string>
    <string name="player_placeholder">Waiting for player to join lobby</string>

    <string name="game_code_prompt">Enter game code</string>
    <string name="check_for_players">Check for players</string>
</resources>
