<?xml version="1.0" encoding="utf-8"?>

 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.spy.JoinGame"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/label_join_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_code_prompt"
        app:layout_constraintRight_toLeftOf="@+id/field_join_game_code"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintBaseline_toBaselineOf="@+id/field_join_game_code"
        tools:layout_constraintBaseline_creator="1" />

    <EditText
        android:id="@+id/field_join_game_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="46dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="205dp"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_join_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/joinGame"
        app:layout_constraintRight_toLeftOf="@+id/button_return_lobby"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="27dp"
        android:layout_marginTop="54dp"
        app:layout_constraintTop_toBottomOf="@+id/field_join_game_code" />

    <Button
        android:id="@+id/button_return_lobby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnLobby"
        tools:layout_constraintRight_creator="1"
        android:layout_marginEnd="68dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_join_game"
        tools:layout_constraintBaseline_creator="1" />
</android.support.constraint.ConstraintLayout>
