<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.spy.GameLobby">

    <TextView
        android:id="@+id/label_lobby_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_lobby_welcome"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/label_p1"
        android:layout_marginTop="46dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="47dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_p1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_placeholder"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/label_p2"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="70dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/label_p2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_placeholder"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/label_p3"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="63dp"
        app:layout_constraintLeft_toLeftOf="@+id/label_p1" />

    <TextView
        android:id="@+id/label_p3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_placeholder"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/label_p2"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_p4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/player_placeholder"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="65dp"
        app:layout_constraintTop_toBottomOf="@+id/label_p3"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/label_p3" />

    <Button
        android:id="@+id/button_begin_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="56dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/returnLobby"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/button_begin_game"
        android:layout_marginEnd="46dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_begin_game" />
</android.support.constraint.ConstraintLayout>
